glibc (2.23-0experimental1) UNRELEASED; urgency=medium

  * debian/testsuite-xfail-debian.mk (powerpc) really mark
    tst-malloc-thread-exit as xfail.
  * debian/testsuite-xfail-debian.mk (ppc64) mark tst-malloc-thread-exit
    test as xfail, it is a known issue and not a regression.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 14 Mar 2016 00:14:11 +0100

glibc (2.23-0experimental0) experimental; urgency=medium

  [ Aurelien Jarno ]
  * New upstream release: version 2.23, with git updates up to 2016-03-12:
    - Fix German translation of "Alarm clock".  Closes: #291293.
    - Fix strtol in Turkish locales.  Closes: #458611.
    - Add LFS support for fts functions.  Closes: #534521.
    - Fix build with GCC 6.  Closes: #811574.
    - Fix unbounded stack allocation in nan* functions (CVE-2014-9761).
      Closes: #813187.
    - debian/patches/localedata/locale-ku_TR.diff: rebased.
    - debian/patches/localedata/fix-lang.diff: upstreamed.
    - debian/patches/localedata/first_weekday.diff: rebased.
    - debian/patches/localedata/locale-nb_NO.diff: upstreamed.
    - debian/patches/localedata/cvs-bg_BG-t_fmt.diff: upstreamed.
    - debian/patches/alpha/local-string-functions.diff: rebased.
    - debian/patches/amd64/local-blacklist-for-Intel-TSX.diff: rebased.
    - debian/patches/arm/local-ioperm.diff: dropped.
    - debian/patches/hppa/cvs-allocatestack-stacktop.diff: upstreamed.
    - debian/patches/hppa/local-pthread_spin_unlock.diff: upstreamed.
    - debian/patches/hppa/submitted-mathdef.diff: upstreamed.
    - debian/patches/hppa/cvs-update-mman.h.diff: upstreamed.
    - debian/patches/hppa/submitted-dladdr.diff: upstreamed.
    - debian/patches/hurd-i386/local-enable-ldconfig.diff: rebased.
    - debian/patches/hurd-i386/tg-tls.diff: rebased.
    - debian/patches/hurd-i386/tg-tls-threadvar.diff: rebased.
    - debian/patches/hurd-i386/tg-hurdsig-fixes.diff: rebased.
    - debian/patches/hurd-i386/tg-hurdsig-global-dispositions.diff: rebased.