@@ -3599,7 +3599,7 @@ Index: glibc-2.21/libpthread/pthread/pt-initialize.c
 +    .ptr_pthread_mutex_trylock = __pthread_mutex_trylock,
 +    .ptr_pthread_mutex_unlock = __pthread_mutex_unlock,
 +    .ptr_pthread_self = __pthread_self,
-+    .ptr_pthread_setcancelstate = __pthread_setcancelstate,
++    .ptr___pthread_setcancelstate = __pthread_setcancelstate,
 +    .ptr_pthread_setcanceltype = __pthread_setcanceltype,
 +    .ptr___pthread_get_cleanup_stack = __pthread_get_cleanup_stack,
 +    .ptr_pthread_once = __pthread_once,
@@ -14605,7 +14605,7 @@ Index: glibc-2.21/libpthread/sysdeps/pthread/flockfile.c
 +
 +#include <stdio.h>
 +#include <libio.h>
-+#include <bits/libc-lock.h>
++#include <libc-lock.h>
 +
 +
 +void
@@ -14644,7 +14644,7 @@ Index: glibc-2.21/libpthread/sysdeps/pthread/ftrylockfile.c
 +#include <errno.h>
 +#include <pthread.h>
 +#include <stdio.h>
-+#include <bits/stdio-lock.h>
++#include <stdio-lock.h>
 +
 +
 +int
@@ -14685,7 +14685,7 @@ Index: glibc-2.21/libpthread/sysdeps/pthread/funlockfile.c
 +#include <pthread.h>
 +#include <stdio.h>
 +#include <libio.h>
-+#include <bits/stdio-lock.h>
++#include <stdio-lock.h>
 +
 +
 +void
@@ -14982,7 +14982,7 @@ Index: glibc-2.21/libpthread/sysdeps/pthread/pthread-functions.h
 +  int (*ptr_pthread_mutex_trylock) (pthread_mutex_t *);
 +  int (*ptr_pthread_mutex_unlock) (pthread_mutex_t *);
 +  pthread_t (*ptr_pthread_self) (void);
-+  int (*ptr_pthread_setcancelstate) (int, int *);
++  int (*ptr___pthread_setcancelstate) (int, int *);
 +  int (*ptr_pthread_setcanceltype) (int, int *);
 +  struct __pthread_cancelation_handler **(*ptr___pthread_get_cleanup_stack) (void);
 +  int (*ptr_pthread_once) (pthread_once_t *, void (*) (void));
