@@ -1,9 +1,13 @@
 glibc (2.23-0experimental1) UNRELEASED; urgency=medium
 
+  [ Aurelien Jarno ]
   * debian/testsuite-xfail-debian.mk (powerpc) really mark
     tst-malloc-thread-exit as xfail.
   * debian/testsuite-xfail-debian.mk (ppc64) mark tst-malloc-thread-exit
     test as xfail, it is a known issue and not a regression.
+
+  [ Samuel Thibault ]
+  * hurd-i386/cvs-libpthread.diff: More updates to glibc-2.23.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 14 Mar 2016 00:14:11 +0100
 
